fix: layout and SSR dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,26 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+[data-theme=light] {
+    --bc: 100 % 0%;
+}
+
+@layer base {
+  h1 {
+    @apply font-heading;
+  }
+  h2 {
+    @apply font-heading;
+  }
+
+  h3 {
+    @apply font-heading;
+  }
+  p {
+    @apply font-body;
+  }
+  .btn {
+    @apply font-body;
+  }
+}
